name:                relais
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/banacorn/relais#readme
license:             BSD3
license-file:        LICENSE
author:              Luā Tîng-Giān
maintainer:          banacorn@gmail.com
copyright:           (c) 2017-2017 Luā Tîng-Giān
category:            network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable relais
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:        base >= 4.7 && < 5
                    ,   bytestring
                    ,   network
